--- a/enter_id.html
+++ b/enter_id.html
@@ -18,7 +18,7 @@
       }
     </style>
 	</head>
-<form method="POST" action="/">
+<form method="POST" action="evaluate">
   <p>Please enter your Annotator ID:</p>
   <input type="number" name="annotator_id" required>
   <button type="submit">Submit</button>
